ajuste en credit verify

--- a/src/app/pages/credit-approved/credit-approved.component.html
+++ b/src/app/pages/credit-approved/credit-approved.component.html
@@ -17,40 +17,40 @@
             </div>
             <div class="campo">
                 <p class="nombre-item">
-                  {{datosCredito.plazo}} meses
+                  {{datosCredito.entidadF.plazo}} meses
                 </p>
                 <p class="valores">Duración en meses</p>
             </div>
             <div class="campo">
                 <p class="nombre-item">
-                  {{datosCredito.tasaEA}}% <a>E.A.</a>
+                  {{datosCredito.entidadF.tasaEA | currency}}% <a>E.A.</a>
                 </p>
                 <p class="valores">Tasa efectivo anual</p>
             </div>
             <div class="campo">
                 <p class="nombre-item">
-                  {{datosCredito.tasaMV}}% <a>M.V.</a>
+                  {{datosCredito.entidadF.tasaMV | currency}}% <a>M.V.</a>
                 </p>
                 <p class="valores">Tasa mensual vencida</p>
             </div>
             <div class="campo">
                 <p class="nombre-item">
-                  {{datosCredito.vtua}} % <a>M.V.</a>
+                  {{datosCredito.entidadF.vtua | currency}} % <a>M.V.</a>
                 </p>
                 <p class="valores">VTUA% total en pesos</p>
             </div>
             <div class="campo">
                 <p class="nombre-item">
-                  ${{datosCredito.vtua}}
+                  ${{datosCredito.entidadF.vtua | currency}}
                 </p>
                 <p class="valores">VTUA% en E.A.</p>
             </div>
             <div class="campo">
                 <p class="titulo2">
-                  {{datosCredito.cuotaMensual | currency}}
+                  {{datosCredito.entidadF.cuotaMensual | currency}}
                 </p>
                 <p class="valores">Tú cuota mensual aproximada</p>
-                <p class="valores">mas seguro de vida <a class="seguro1">{{datosCredito.valorSeguro | currency}}</a></p>
+                <p class="valores">mas seguro de vida <a class="seguro1">{{datosCredito.entidadF.valorSeguro | currency}}</a></p>
             </div>
         </div>
 
