--- a/src/app/pages/credit-preapproved/credit-preapproved.component.html
+++ b/src/app/pages/credit-preapproved/credit-preapproved.component.html
@@ -14,13 +14,13 @@
             </div>
             <div class="campo">
                 <p class="nombre-item">
-                  {{datosCredito.vtua | currency}}
+                  {{datosCredito.entidadF.vtua | currency}}
                 </p>
                 <p class="valores">VTUA% en E.A.</p>
             </div>
             <div class="campo">
                 <p class="titulo2">
-                  {{datosCredito.cuotaMensual | currency}}
+                  {{datosCredito.entidadF.cuotaMensual | currency}}
                 </p>
                 <p class="valores">Tú cuota mensual aproximada</p>
                 <p class="valores">mas seguro de vida <a class="seguro1">{{datosCredito.valorSeguro | currency}}</a></p>
