se ajuto en  transaction y voucher numero de cuenta no obligatorio

--- a/src/app/pages/transaction/transaction.component.html
+++ b/src/app/pages/transaction/transaction.component.html
@@ -4,7 +4,7 @@
       (onClickEventBack)="goToPage(routes.back)"
       [entity]="entity"
       [typeProduct]="typeProduct.nombreTipo"
-      [accountNumber]="product.numeroCuenta"
+      [accountNumber]="accountNumber"
     ></app-header-transaction>
   </div>
   <app-list-transaction
