--- a/src/app/pages/voucher/voucher.component.html
+++ b/src/app/pages/voucher/voucher.component.html
@@ -25,7 +25,7 @@
         <p class="nombre-item">Producto de origen</p>
         <p class="valores">
           {{ subtypeProduct.nombre }}
-          {{ productF.numeroCuenta | valueHidden }}
+          {{ (productF.numeroCuenta || 'N/A') | valueHidden }}
         </p>
       </div>
       <div class="campo">
