--- a/src/app/pages/credit-verify/credit-verify.component.html
+++ b/src/app/pages/credit-verify/credit-verify.component.html
@@ -33,7 +33,7 @@
             </div>
             <div class="campo">
                 <p class="nombre-item">
-                  {{datosCredito.entidadF.vtua | number: '1.0-2'}} <a>M.V.</a>
+                  {{datosCredito.entidadF.vtua | number: '1.0-2'}} <a>VTUA%</a>
                 </p>
                 <p class="valores">Valor total unificado</p>
             </div>
